# MediaPlayer

./: CMakeLists.txt  CMakeLists.txt.user.2f5a48d  CMakeLists.txt.user.ad8a668  IVideoCall.h  OverloadSlider.cpp  OverloadSlider.h  PlayMode.h  README.md  SynModule.cpp  SynModule.h  TitleBar.qml  XAudioPlay.cpp  XAudioPlay.h  XAudioResample.cpp  XAudioResample.h  XAudioThread.cpp  XAudioThread.h  XDecode.cpp  XDecode.h  XDecodeThread.cpp  XDecodeThread.h  XDemux.cpp  XDemux.h  XDemuxThread.cpp  XDemuxThread.h  XMediaManager.cpp  XMediaManager.h  XResample.cpp  XResample.h  XSubtileThread.cpp  XSubtitleThread.cpp  XSubtitleThread.h  XVideoThread.cpp  XVideoThread.h  XVideoWidget.cpp  XVideoWidget.h  audioPlay2.cpp  audioPlay2.h  controller.cpp  controller.h  (+15 more)
DataManager/: data.cpp  data.h  datamanager.cpp  datamanager.h  randomlist.h
OpenglItem/: myitem.cpp  myitem.h  myrender.cpp  myrender.h
components/: ConfigDialog.qml  CoverPage.qml  DelDialog.qml  ErrorPopup.qml  Footer.qml  InfoPopup.qml  LeftMenu.qml  ListData.qml  MusicListData.qml  MusicView.qml  PlayQueue.qml  SearchBox.qml  TitleBar.qml  VideoListData.qml  VideoPage.qml  VideoView.qml
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: XMediaManager.cpp  XMediaManager.h  main.cpp
src/Audio/: XAudioResample.h  XAudioThread.cpp  XAudioThread.h  audioPlay2.h
src/Controller/: PlayMode.h  controller.cpp  controller.h
src/DataManager/: data.cpp  data.h  datamanager.h  randomlist.cpp  randomlist.h
src/Decode/: XDecode.cpp  XDecode.h  XDecodeThread.cpp  XDecodeThread.h
src/Demux/: XDemux.cpp  XDemux.h  XDemuxThread.cpp  XDemuxThread.h
src/OpenglItem/: myitem.cpp  myitem.h  myrender.cpp  myrender.h
src/Subtitle/: XSubtitleThread.cpp  XSubtitleThread.h
src/Video/: SynModule.cpp  SynModule.h  XVideoThread.cpp  XVideoThread.h
until/: bufferqueue.h  imageprovider.cpp  imageprovider.h  yuvdata.h
util/: bufferqueue.h
utility/: pcmdata.h  yuvdata.h
utils/: bufferqueue.h
